--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -32,7 +32,7 @@
 
 2.中共外交辞令出尽丑 “耿爽模拟器”被下架
 中国外交部发言人耿爽的对外发.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747600.md#1" target="_blank">【2019盘点】中共监控之十大黑科技</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747600.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/79ff06da6dcd41345adb65651dfc55e2-150x120.jpg" align ="left"></a>以美国为首的西方自由国家是利用高科技为人民谋福利，而中共是利用高科技为中共独裁统治服务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 8:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759917.md#1" target="_blank">安徽省委巡视组前副组长被判刑10年半</a><br></h3>2019年12月31日，中共安徽省委第七巡视组前副组长胡洪涛犯受贿罪被判刑10年半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759620.md#1" target="_blank">中央美院教授被举报性骚扰多名女生</a><br></h3>近日，多位中央美术学院的女学生通过自媒体爆料，她们遭到该校教授姚舜熙的长期性骚扰。但该校经过长达半年的调查，至今未作出公开回应，只是对姚进行了内部处理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759473.md#1" target="_blank">2020新年首日四川自贡现4.3级地震</a><br></h3>2020年新年首日，四川自贡发生4.3级地震，震源深度21千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
